--- a/client/package.json
+++ b/client/package.json
@@ -23,10 +23,12 @@
     "react-apexcharts": "^1.4.1",
     "react-confirm-alert": "^3.0.6",
     "react-data-table-component": "^7.6.2",
+    "react-date-range": "^2.0.1",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
     "react-lines-ellipsis": "^0.15.4",
+    "react-multi-date-picker": "^4.5.2",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
@@ -60,6 +62,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "tailwindcss": "^3.4.3"
   }
 }
